--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,24 @@
 page-about {
+.card-background-page {
+  ion-card {
+    position: relative;
+    text-align: center;
+  }
+  .card-title {
+    position: absolute;
+    top: 40%;
+    font-size: 3.0em;
+    width: 100%;
+    font-weight: bold;
+    color: #fff;
+  }
+  .card-subtitle {
+    font-size: 2.0em;
+    position: absolute;
+    top: 70%;
+    width: 100%;
+    color: #fff;
+  }
+}
 
 }
