--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,14 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary :   #1d95f7,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  favorite :  #f7ec1d
+
+
 );
 
 
